# hypervisor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: CMakeLists.txt  client.cpp  client.hpp  dashboard.cpp  dashboard.hpp  main.cpp
cmake/: version.hpp.in
common/: CMakeLists.txt
common/hypercore/: log.hpp
config/: hypervisor.cfg
docs/: architecture.md  boot.md  design-notes.md  iso.md  protocol.md  schema.md  testing.md
init/: README.md  hypercore-init
iso-builder/: README.md  build_iso.sh
iso-builder/testguest/: build-testguest.sh
libconfig/: CMakeLists.txt
libconfig/include/hypercore/config/: diagnostics.hpp  host_info.hpp  parser.hpp  types.hpp  validator.hpp
libconfig/src/: host_info.cpp  parser.cpp  strings.cpp  validator.cpp
libcore/: CMakeLists.txt
libcore/include/hypercore/core/: affinity.hpp  capabilities.hpp  control_server.hpp  guest_agent.hpp  pidfile.hpp  portmap.hpp  proc_stats.hpp  qemu.hpp  qmp.hpp  reconcile.hpp  supervisor.hpp  usock.hpp
libcore/src/: affinity.cpp  capabilities.cpp  control_server.cpp  guest_agent.cpp  pidfile.cpp  portmap.cpp  proc_stats.cpp  qemu.cpp  qmp.cpp  reconcile.cpp  supervisor.cpp  usock.cpp
libcore/tools/: hostcaps.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  config_test.cpp  hardening_test.cpp  hctest.hpp  integration_test.cpp  qmp_fuzz_test.cpp  reconcile_test.cpp
tests/fixtures/: minimal.cfg
